--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+  <body class="page__body">
 
+    <header class="page-header">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image logo" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+            <ul class="main-nav__list">
+              <li class="main-nav__item main-nav__item--active">
+                <a>Главная</a>
+              </li>
+              <li class="main-nav__item">
+                <a href="#">Каталог продукции</a>
+              </li>
+              <li class="main-nav__item">
+                <a href="#">Подбор программы</a>
+              </li>
+            </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main class="page-main">
+      <div class="page-main__wrapper">
+        <h1 class="page-main__title">Функциональное питание для котов</h1>
+
+        <section class="program">
+          <h2 class="visually-hidden">Подбор питания для котов</h2>
+          <p class="program__text">Занялся собой? Займись котом!</p>
+          <a class="program__link" href="#">Подобрать программу</a>
+        </section>
+
+        <section class="slimming">
+          <h2 class="slimming__title">Похудение</h2>
+          <p class="sliming__text text-catalog">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a class="sliming__link link-catalog" href="#">каталог slim</a>
+        </section>
+
+        <section class="weight-gain">
+          <h2 class="weight-gain__title">Набор массы</h2>
+          <p class="weight-gain__text text-catalog">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a class="weight-gain__link link-catalog" href="#">каталог pro</a>
+        </section>
+
+        <section class="advantages">
+          <h2 class="visually-hidden">Достоинства нашего питания</h2>
+          <p class="advantages__text">Как это работает</p>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <p class="advantages__item-text">
+                Функциональное питание содержит только полезные питательные вещества.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <p class="advantages__item-text">
+                Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <p class="advantages__item-text">
+                Замените один-два приема обычной еды на наше функциональное питание.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <p class="advantages__item-text">
+                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+              </p>
+            </li>
+          </ul>
+        </section>
+
+        <section class="example">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__text">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+          <dl class="example__list">
+            <dt class="example__definition">5кг</dt>
+            <dd class="example__description">снижение веса</dd>
+            <dt class="example__definition">60 дней</dt>
+            <dd class="example__description">затрачено времени</dd>
+          </dl>
+          <b class="example__expenses">Затраты на питание: 15 000 РУБ.</b>
+          <div class="example__it-was">
+            <img class="example__image-it-was" src="https://via.placeholder.com/311x232" width="311" height="232" alt="до нашего питания">
+            <button class="example__button-it-was">Было</button>
+          </div>
+          <div class="example__after">
+            <img class="example__image-after" src="https://via.placeholder.com/251x240" width="251" height="240" alt="после нашего питания">
+            <button class="example__button-after" type="button">Стало</button>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer class="page-footer">
+      <div class="page-footer_wrapper">
+
+        <div class="page-footer__adress">
+          <p class="page-footer__slogan">
+            приглашаем к сотрудничеству дилеров!
+          </p>
+          <p class="page-footer__text">
+            ул. Большая
+            Конюшенная, д. 19/8
+            Санкт-Петербург
+          </p>
+        </div>
+
+        <img class="page-footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+        <img class="page-footer__logo logo" src="https://via.placeholder.com/128x24" width="128" height="24">
+
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        </div>
+
+      </div>
+
+    </footer>
   </body>
 </html>
