--- a/source/index.html
+++ b/source/index.html
@@ -121,7 +121,7 @@
         </div>
 
         <img class="page-footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-        <img class="page-footer__logo logo" src="https://via.placeholder.com/128x24" width="128" height="24">
+        <img class="page-footer__logo logo" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
 
         <div class="page-footer__social social">
           <ul class="social__list">
