--- a/source/index.html
+++ b/source/index.html
@@ -10,106 +10,112 @@
     <header class="page-header">
       <div class="page-header__wrapper">
         <a class="page-header__logo">
-          <img class="page-header__logo-image logo" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
+          <img class="page-header__logo-image logo" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
         </a>
-        <nav class="main-nav">
+        <nav class="page-header__main-nav main-nav">
           <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-            <ul class="main-nav__list">
-              <li class="main-nav__item main-nav__item--active">
-                <a>Главная</a>
-              </li>
-              <li class="main-nav__item">
-                <a href="#">Каталог продукции</a>
-              </li>
-              <li class="main-nav__item">
-                <a href="#">Подбор программы</a>
-              </li>
-            </ul>
+          <ul class="main-nav__list site_menu">
+            <li class="main-nav__item main-nav__item--active">
+              <a>Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#">Каталог продукции</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="#">Подбор программы</a>
+            </li>
+          </ul>
         </nav>
       </div>
     </header>
 
     <main class="page-main">
-      <div class="page-main__wrapper">
-        <h1 class="page-main__title">Функциональное питание для котов</h1>
+      <h1 class="page-main__title">Функциональное питание для котов</h1>
 
-        <section class="program">
+      <section class="program">
+        <div class="program__wrapper">
           <h2 class="visually-hidden">Подбор питания для котов</h2>
           <p class="program__text">Занялся собой? Займись котом!</p>
           <a class="program__link" href="#">Подобрать программу</a>
-        </section>
+        </div>
+      </section>
 
-        <section class="slimming">
-          <h2 class="slimming__title">Похудение</h2>
-          <p class="sliming__text text-catalog">
+      <section class="program-type program-type--slimming">
+        <div class="program-type__wrapper">
+          <h2 class="program-type__title">Похудение</h2>
+          <p class="program-type__text text-catalog">
             Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
-          <a class="sliming__link link-catalog" href="#">каталог slim</a>
-        </section>
+          <a class="program-type__link link-catalog" href="#">каталог slim</a>
+        </div>
+      </section>
 
-        <section class="weight-gain">
-          <h2 class="weight-gain__title">Набор массы</h2>
-          <p class="weight-gain__text text-catalog">
+      <section class="program-type program-type--weight-gain">
+        <div class="program-type__wrapper">
+          <h2 class="program-type__title">Набор массы</h2>
+          <p class="program-type__text text-catalog">
             Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-          <a class="weight-gain__link link-catalog" href="#">каталог pro</a>
-        </section>
+          <a class="program-type__link link-catalog" href="#">каталог pro</a>
+        </div>
+      </section>
 
-        <section class="advantages">
+      <section class="advantages">
+        <div class="advantages__wrapper">
           <h2 class="visually-hidden">Достоинства нашего питания</h2>
           <p class="advantages__text">Как это работает</p>
           <ul class="advantages__list">
             <li class="advantages__item">
-              <p class="advantages__item-text">
-                Функциональное питание содержит только полезные питательные вещества.
-              </p>
+              Функциональное питание содержит только полезные питательные вещества.
             </li>
             <li class="advantages__item">
-              <p class="advantages__item-text">
-                Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-              </p>
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </li>
             <li class="advantages__item">
-              <p class="advantages__item-text">
-                Замените один-два приема обычной еды на наше функциональное питание.
-              </p>
+              Замените один-два приема обычной еды на наше функциональное питание.
             </li>
             <li class="advantages__item">
-              <p class="advantages__item-text">
-                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-              </p>
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </li>
           </ul>
-        </section>
+        </div>
+      </section>
 
-        <section class="example">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__text">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-          </p>
-          <dl class="example__list">
-            <dt class="example__definition">5кг</dt>
-            <dd class="example__description">снижение веса</dd>
-            <dt class="example__definition">60 дней</dt>
-            <dd class="example__description">затрачено времени</dd>
-          </dl>
-          <b class="example__expenses">Затраты на питание: 15 000 РУБ.</b>
-          <div class="example__it-was">
-            <img class="example__image-it-was" src="https://via.placeholder.com/311x232" width="311" height="232" alt="до нашего питания">
-            <button class="example__button-it-was">Было</button>
+      <section class="example">
+        <div class="example__wrapper">
+          <div class="example__container">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <dl class="example__list">
+              <dt class="example__definition">снижение веса</dt>
+              <dd class="example__description">5кг</dd>
+              <dt class="example__definition">затрачено времени</dt>
+              <dd class="example__description">60 дней</dd>
+            </dl>
+            <b class="example__expenses">Затраты на питание: 15 000 РУБ.</b>
           </div>
-          <div class="example__after">
-            <img class="example__image-after" src="https://via.placeholder.com/251x240" width="251" height="240" alt="после нашего питания">
-            <button class="example__button-after" type="button">Стало</button>
+          <div class="example__it-was-after">
+            <div class="example__image">
+              <img class="example__image-it-was" src="https://via.placeholder.com/311x232" width="311" height="232" alt="до нашего питания">
+              <img class="example__image-after" src="https://via.placeholder.com/251x240" width="251" height="240" alt="после нашего питания">
+            </div>
+            <div class="example__toggle toggle-controls">
+              <button class="toggle-controls__it-was" type="button">Было</button>
+              <div class="toggle-controls__scale">
+                <div class="toggle-controls__bar"></div>
+              </div>
+              <button class="toggle-controls__after" type="button">Стало</button>
+            </div>
           </div>
+        </div>
         </section>
-      </div>
     </main>
 
     <footer class="page-footer">
-      <div class="page-footer_wrapper">
-
-        <div class="page-footer__adress">
+      <div class="page-footer__wrapper">
+        <div class="page-footer__address">
           <p class="page-footer__slogan">
             приглашаем к сотрудничеству дилеров!
           </p>
@@ -119,30 +125,31 @@
             Санкт-Петербург
           </p>
         </div>
-
-        <img class="page-footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-        <img class="page-footer__logo logo" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
-
-        <div class="page-footer__social social">
-          <ul class="social__list">
-            <li class="social__item">
-              <a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
-            </li>
-            <li class="social__item">
-              <a class="social__link social__link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        </div>
-
       </div>
 
+      <img class="page-footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <div class="page-footer__container">
+        <div class="page-footer__wrapper">
+          <a class="page-footer__logo">
+            <img class="page-footer__logo-image logo" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
+          </a>
+          <ul class="page-footer__social-list">
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-link page-footer__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
+            </li>
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-link page-footer__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
+            </li>
+            <li class="page-footer__social-item">
+              <a class="page-footer__social-link page-footer__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
+            </li>
+          </ul>
+
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+            HTML Academy<img class="page-footer__logo-academy" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логодип «Html Academy»">
+          </a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
