--- a/source/index.html
+++ b/source/index.html
@@ -5,86 +5,77 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
 
-  <body class="page__body">
+  <body class="page__body page-body">
 
-    <header class="page-header">
-      <div class="page-header__wrapper">
-        <a class="page-header__logo">
-          <img class="page-header__logo-image logo" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
-        </a>
-        <nav class="page-header__main-nav main-nav">
-          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-          <ul class="main-nav__list site_menu">
-            <li class="main-nav__item main-nav__item--active">
-              <a>Главная</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="#">Каталог продукции</a>
-            </li>
-            <li class="main-nav__item">
-              <a href="#">Подбор программы</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+    <header class="page-body__header page-header container">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
+      </a>
+      <nav class="page-header__main-nav main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <ul class="main-nav__list site-menu">
+          <li class="site-menu__item site-menu__item--active">
+            <a>Главная</a>
+          </li>
+          <li class="site-menu__item">
+            <a href="#">Каталог продукции</a>
+          </li>
+          <li class="site-menu__item">
+            <a href="#">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
-    <main class="page-main">
+    <main class="page-body__main page-main">
       <h1 class="page-main__title">Функциональное питание для котов</h1>
 
       <section class="program">
-        <div class="program__wrapper">
+        <div class="program__wrapper container">
           <h2 class="visually-hidden">Подбор питания для котов</h2>
           <p class="program__text">Занялся собой? Займись котом!</p>
-          <a class="program__link" href="#">Подобрать программу</a>
+          <a class="program__link program-bottom" href="#">Подобрать программу</a>
         </div>
       </section>
 
-      <section class="program-type program-type--slimming">
-        <div class="program-type__wrapper">
-          <h2 class="program-type__title">Похудение</h2>
-          <p class="program-type__text text-catalog">
-            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
-          </p>
-          <a class="program-type__link link-catalog" href="#">каталог slim</a>
-        </div>
+      <section class="program-type program-type--slimming container">
+        <h2 class="program-type__title">Похудение</h2>
+        <p class="program-type__text">
+          Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+        </p>
+        <a class="program-type__link" href="#">каталог slim</a>
       </section>
 
-      <section class="program-type program-type--weight-gain">
-        <div class="program-type__wrapper">
-          <h2 class="program-type__title">Набор массы</h2>
-          <p class="program-type__text text-catalog">
-            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
-          </p>
-          <a class="program-type__link link-catalog" href="#">каталог pro</a>
-        </div>
+      <section class="program-type program-type--weight-gain container">
+        <h2 class="program-type__title">Набор массы</h2>
+        <p class="program-type__text">
+          Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+        </p>
+        <a class="program-type__link" href="#">каталог pro</a>
       </section>
 
-      <section class="advantages">
-        <div class="advantages__wrapper">
-          <h2 class="visually-hidden">Достоинства нашего питания</h2>
-          <p class="advantages__text">Как это работает</p>
-          <ul class="advantages__list">
-            <li class="advantages__item">
-              Функциональное питание содержит только полезные питательные вещества.
-            </li>
-            <li class="advantages__item">
-              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-            </li>
-            <li class="advantages__item">
-              Замените один-два приема обычной еды на наше функциональное питание.
-            </li>
-            <li class="advantages__item">
-              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-            </li>
-          </ul>
-        </div>
+      <section class="advantages container">
+        <h2 class="advantages__title title">Как это работает</h2>
+        <ul class="advantages__list">
+          <li class="advantages__item">
+            Функциональное питание содержит только полезные питательные вещества.
+          </li>
+          <li class="advantages__item">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </li>
+          <li class="advantages__item">
+            Замените один-два приема обычной еды на наше функциональное питание.
+          </li>
+          <li class="advantages__item">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </li>
+        </ul>
       </section>
 
       <section class="example">
-        <div class="example__wrapper">
+        <div class="example__wrapper container">
           <div class="example__container">
-            <h2 class="example__title">Живой пример</h2>
+            <h2 class="example__title title">Живой пример</h2>
             <p class="example__text">
               Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
             </p>
@@ -110,45 +101,40 @@
             </div>
           </div>
         </div>
-        </section>
+      </section>
     </main>
 
-    <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <div class="page-footer__address">
-          <p class="page-footer__slogan">
-            приглашаем к сотрудничеству дилеров!
-          </p>
-          <p class="page-footer__text">
-            ул. Большая
-            Конюшенная, д. 19/8
-            Санкт-Петербург
-          </p>
-        </div>
+    <footer class="page-body__footer page-footer">
+      <div class="page-footer__address container">
+        <p class="page-footer__slogan">
+          приглашаем к сотрудничеству дилеров!
+        </p>
+        <p class="page-footer__text">
+          ул. Большая
+          Конюшенная, д. 19/8
+          Санкт-Петербург
+        </p>
       </div>
-
       <img class="page-footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
-      <div class="page-footer__container">
-        <div class="page-footer__wrapper">
-          <a class="page-footer__logo">
-            <img class="page-footer__logo-image logo" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
-          </a>
-          <ul class="page-footer__social-list">
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-link page-footer__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
-            </li>
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-link page-footer__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
-            </li>
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-link page-footer__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
-            </li>
-          </ul>
+      <div class="page-footer__container container">
+        <a class="page-footer__logo">
+          <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
+        </a>
+        <ul class="page-footer__social-list">
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-link page-footer__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-link page-footer__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-link page-footer__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
+          </li>
+        </ul>
 
-          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-            HTML Academy<img class="page-footer__logo-academy" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логодип «Html Academy»">
-          </a>
-        </div>
+        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+          HTML Academy<img class="page-footer__logo-academy" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логодип «Html Academy»">
+        </a>
       </div>
     </footer>
   </body>
