Разметка страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -28,13 +28,14 @@
     </header>
 
     <main class="page-body__main page-main">
+
       <h1 class="page-main__title">Функциональное питание для котов</h1>
 
       <section class="program">
         <div class="program__wrapper container">
           <h2 class="visually-hidden">Подбор питания для котов</h2>
           <p class="program__text">Занялся собой? Займись котом!</p>
-          <a class="program__link program-bottom" href="#">Подобрать программу</a>
+          <a class="program__link buttom" href="#">Подобрать программу</a>
         </div>
       </section>
 
