--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
         <div class="program__wrapper container">
           <h2 class="visually-hidden">Подбор питания для котов</h2>
           <p class="program__text">Занялся собой? Займись котом!</p>
-          <a class="program__link buttom" href="#">Подобрать программу</a>
+          <a class="program__link button" href="#">Подобрать программу</a>
         </div>
       </section>
 
