--- a/source/form.html
+++ b/source/form.html
@@ -8,20 +8,20 @@
   <body class="page__body page-body">
 
     <header class="page-body__header page-header container">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
       </a>
       <nav class="page-header__main-nav main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-menu">
           <li class="site-menu__item site-menu__item--active">
-            <a>Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="site-menu__item">
-            <a href="#">Каталог продукции</a>
+            <a href="catalog.html">Каталог продукции</a>
           </li>
           <li class="site-menu__item">
-            <a href="#">Подбор программы</a>
+            <a>Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -37,38 +37,52 @@
       <form class="page-main__form form container" method="post" action="https://echo.htmlacademy.ru">
 
         <fieldset class="form__group">
-          <label class="form__label" for="name">Имя:*</label>
-          <input class="form__text" type="text" name="name" id="name" placeholder="Барсик" required>
-          <label class="form__label" for="weight">Вес (кг):*</label>
-          <input class="form__text" type="text" name="weight" id="weight" placeholder="7" required>
-          <label class="form__label" for="age">Возраст (лет):</label>
-          <input class="form__text" type="text" name="age" id="age" placeholder="7">
+          <legend class="visually-hidden">Данные кота</legend>
+          <p class="form__cat-data">
+            <label class="form__label" for="name">Имя:*</label>
+            <input class="form__text" type="text" name="name" id="name" placeholder="Барсик" required>
+          </p>
+          <p class="form__cat-data">
+            <label class="form__label" for="weight">Вес (кг):*</label>
+            <input class="form__number" type="number" name="weight" id="weight" placeholder="7" required>
+          </p>
+          <p class="form__cat-data">
+            <label class="form__label" for="age">Возраст (лет):</label>
+            <input class="form__number" type="number" name="age" id="age" placeholder="7">
+          </p>
         </fieldset>
 
         <fieldset class="form__group">
-          <input class="form__radio" type="radio" name="slimming" id="slimming" checked>
-          <label class="form__label" for="slimming">Похудение</label>
-          <input class="form__radio" type="radio" name="weight-gain" id="weight-gain">
-          <label class="form__label" for="weight-gain">Набор массы</label>
-          <input class="form__radio" type="radio" name="not-know" id="not-know">
-          <label class="form__label" for="not-know">Не знаю (Нужен ваш совет)</label>
+          <legend class="visually-hidden">Выбор программы</legend>
+          <p class="form__program">
+            <input class="form__radio" type="radio" name="programm" value="slimming" id="slimming" checked>
+            <label class="form__label" for="slimming">Похудение</label>
+          </p>
+          <p class="form__program">
+            <input class="form__radio" type="radio" name="programm" value="weight-gain" id="weight-gain">
+            <label class="form__label" for="weight-gain">Набор массы</label>
+          </p>
+          <p class="form__program">
+            <input class="form__radio" type="radio" name="programm" value="not-know" id="not-know">
+            <label class="form__label" for="not-know">Не знаю (Нужен ваш совет)</label>
+          </p>
         </fieldset>
 
         <fieldset class="form__group">
-          <legend class="form__legent">Контактные данные(владельца кота)</legend>
+          <legend class="form__legend">Контактные данные(владельца кота)</legend>
           <label class="form__label" for="email">E-mail:*</label>
           <input class="form__email" type="email" name="email" id="email" placeholder="kuklachev@gmail.com" required>
           <label class="form__label" for="tel">Телефон:*</label>
-          <input class="form__tel" type="tel" name="tel" pattern="\+?[0-9\s\-\(\)]+" id="tel" placeholder="8 (960) 900-60-90" required>
+          <input class="form__tel" type="tel" name="tel" pattern="8 \(\d{3}\) \d{3}-\d{2}-\d{2}" id="tel" placeholder="8 (960) 900-60-90" required>
         </fieldset>
 
         <fieldset class="form__group">
-          <legend class="form__legent">Комментарий</legend>
+          <legend class="form__legend">Комментарий</legend>
           <textarea class="form__textarea-comment" name="comment">Расскажите обо всех повАдках кота</textarea>
         </fieldset>
 
         <fieldset class="form__group">
-          <legend class="form__legent">Дополнительно</legend>
+          <legend class="form__legend">Дополнительно</legend>
           <input class="form__checkbox" type="checkbox" name="sweetener" id="sweetener" checked>
           <label class="form__label" for="sweetener">Сахарозаменитель</label>
           <input class="form__checkbox" type="checkbox" name="drinking-water" id="drinking-water">
@@ -79,7 +93,7 @@
           <label class="form__label" for="vitamins">Витамины</label>
         </fieldset>
         <input class="form__submit button" type="submit" value="отправить заявку">
-        <small class="form__legent">* — Обязательные поля</small>
+        <small class="form__small">* — Обязательные поля</small>
       </form>
 
     </main>
@@ -97,7 +111,7 @@
       </div>
       <img class="page-footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       <div class="page-footer__container container">
-        <a class="page-footer__logo">
+        <a class="page-footer__logo" href="index.html">
           <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
         </a>
         <ul class="page-footer__social-list">
