--- a/source/form.html
+++ b/source/form.html
@@ -92,7 +92,7 @@
           <input class="form__checkbox" type="checkbox" name="vitamins" id="vitamins">
           <label class="form__label" for="vitamins">Витамины</label>
         </fieldset>
-        <input class="form__submit button" type="submit" value="отправить заявку">
+        <input class="form__submit button" type="button" value="отправить заявку">
         <small class="form__small">* — Обязательные поля</small>
       </form>
 
