Исправил тег кнопки отправки формы

--- a/source/form.html
+++ b/source/form.html
@@ -92,7 +92,7 @@
           <input class="form__checkbox" type="checkbox" name="vitamins" id="vitamins">
           <label class="form__label" for="vitamins">Витамины</label>
         </fieldset>
-        <input class="form__submit button" type="button" value="отправить заявку">
+        <button class="form__submit button" type="submit">отправить заявку</button>
         <small class="form__small">* — Обязательные поля</small>
       </form>
 
