--- a/source/catalog.html
+++ b/source/catalog.html
@@ -169,45 +169,45 @@
         </div>
       </section>
 
-      <section class="page-main__catalog catalog-list container">
-        <h2 class="catalog-list__title">Дополнительные товары</h2>
+      <section class="page-main__additional-goods catalog-additional-goods container">
+        <h2 class="catalog-additional-goods__title">Дополнительные товары</h2>
 
-        <ul class="catalog-list__additional-goods-list additional-goods">
+        <ul class="catalog-additional-goods__additional-goods-list additional-goods">
 
-          <li class="additional-goods__item additional-goods-item">
-            <a class="additional-goods-item__link" href="#">
-              <h3 class="additional-goods-item__title">Сахарозаменитель</h3>
+          <li class="additional-goods__item additional-goods-product">
+            <a class="additional-goods-product__link" href="#">
+              <h3 class="additional-goods-product__title">Сахарозаменитель</h3>
             </a>
-            <p class="additional-goods-item__text">1 упаковка (100 г)</p>
-            <p class="additional-goods-item__price">200 Р.</p>
-            <a class="additional-goods-item__link button" href="#">Заказать</a>
+            <p class="additional-goods-product__text">1 упаковка (100 г)</p>
+            <p class="additional-goods-product__price">200 Р.</p>
+            <a class="additional-goods-product__link button" href="#">Заказать</a>
           </li>
 
-          <li class="additional-goods__item additional-goods-item">
-            <a class="additional-goods-item__link" href="#">
-              <h3 class="additional-goods-item__title">Питьевая вода</h3>
+          <li class="additional-goods__item additional-goods-product">
+            <a class="additional-goods-product__link" href="#">
+              <h3 class="additional-goods-product__title">Питьевая вода</h3>
             </a>
-            <p class="additional-goods-item__text">5 литров</p>
-            <p class="additional-goods-item__price">50 Р.</p>
-            <a class="additional-goods-item__link button" href="#">Заказать</a>
+            <p class="additional-goods-product__text">5 литров</p>
+            <p class="additional-goods-product__price">50 Р.</p>
+            <a class="additional-goods-product__link button" href="#">Заказать</a>
           </li>
 
-          <li class="additional-goods__item additional-goods-item">
-            <a class="additional-goods-item__link" href="#">
-              <h3 class="additional-goods-item__title">Молоко</h3>
+          <li class="additional-goods__item additional-goods-product">
+            <a class="additional-goods-product__link" href="#">
+              <h3 class="additional-goods-product__title">Молоко</h3>
             </a>
-            <p class="additional-goods-item__text">1 литр</p>
-            <p class="additional-goods-item__price">100 Р.</p>
-            <a class="additional-goods-item__link button" href="#">Заказать</a>
+            <p class="additional-goods-product__text">1 литр</p>
+            <p class="additional-goods-product__price">100 Р.</p>
+            <a class="additional-goods-product__link button" href="#">Заказать</a>
           </li>
 
-          <li class="additional-goods__item additional-goods-item">
-            <a class="additional-goods-item__link" href="#">
-              <h3 class="additional-goods-item__title">Витамины</h3>
+          <li class="additional-goods__item additional-goods-product">
+            <a class="additional-goods-product__link" href="#">
+              <h3 class="additional-goods-product__title">Витамины</h3>
             </a>
-            <p class="additional-goods-item__text">1 упаковка (30 г)</p>
-            <a class="additional-goods-item__link button" href="#">Заказать</a>
-            <p class="additional-goods-item__price">300 Р.</p>
+            <p class="additional-goods-product__text">1 упаковка (30 г)</p>
+            <a class="additional-goods-product__link button" href="#">Заказать</a>
+            <p class="additional-goods-product__price">300 Р.</p>
           </li>
 
         </ul>
