--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
         <div class="program__wrapper container">
           <h2 class="program__wrapper-title">Функциональное питание для котов</h2>
           <p class="program__text">Занялся собой? Займись котом!</p>
-          <img src="/img/index-can-mobile.png" width="280" height="270">
+          <img src="img/index-can-mobile.png" width="280" height="270">
           <a class="program__link button" href="#">Подобрать программу</a>
         </div>
       </section>
@@ -119,7 +119,7 @@
           Санкт-Петербург
         </p>
       </div>
-      <img class="page-footer__map" src="/img/location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
+      <img class="page-footer__map" src="img/location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       <div class="page-footer__container container">
         <a class="page-footer__logo">
           <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
