--- a/source/index.html
+++ b/source/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
     <link href="css/style.css" rel="stylesheet">
-    <linl href="css/normalize.css" rel="stylesheet">
   </head>
 
   <body class="page__body page-body">
 
-    <header class="page-body__header page-header container">
+    <header class="page-body__header page-header">
       <a class="page-header__logo">
         <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
       </a>
@@ -17,7 +16,7 @@
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <ul class="main-nav__list site-menu">
           <li class="site-menu__item site-menu__item--active">
-            <a class=" ">Главная</a>
+            <a class="site-menu__link">Главная</a>
           </li>
           <li class="site-menu__item">
             <a class="site-menu__link" href="catalog.html">Каталог продукции</a>
@@ -42,7 +41,7 @@
         </div>
       </section>
 
-      <section class="page-main__program-type program-type program-type--slimming container">
+      <section class="page-main__program-type program-type program-type--slimming">
         <h2 class="program-type__title">Похудение</h2>
         <p class="program-type__text">
           Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
@@ -50,7 +49,7 @@
         <a class="program-type__link" href="#">каталог slim</a>
       </section>
 
-      <section class="page-main__program-type program-type program-type--weight-gain container">
+      <section class="page-main__program-type program-type program-type--weight-gain">
         <h2 class="program-type__title">Набор массы</h2>
         <p class="program-type__text">
           Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
@@ -110,29 +109,31 @@
 
     <footer class="page-body__footer page-footer">
       <div class="page-footer__address address container">
-        <p class="page-footer__slogan">
-          приглашаем к сотрудничеству дилеров!
-        </p>
-        <p class="page-footer__text">
-          ул. Большая
-          Конюшенная, д. 19/8
-          Санкт-Петербург
-        </p>
+        <div class="address__wrapper">
+          <p class="page-footer__slogan">
+            приглашаем к сотрудничеству дилеров!
+          </p>
+          <p class="page-footer__text">
+            ул. Большая
+            Конюшенная, д. 19/8
+            Санкт-Петербург
+          </p>
+        </div>
       </div>
       <img class="page-footer__map" src="img/location.png" width="320" height="362" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
       <div class="page-footer__container container">
         <a class="page-footer__logo">
           <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
         </a>
-        <ul class="page-footer__social-list social-list">
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
+        <ul class="page-footer__social social-list">
+          <li class="social-list__social-item">
+            <a class="social-list__social-link social-list__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
           </li>
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
+          <li class="social-list__social-item">
+            <a class="social-list__social-link social-list__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
           </li>
-          <li class="page-footer__social-item">
-            <a class="page-footer__social-link page-footer__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
+          <li class="social-list__social-item">
+            <a class="social-list__social-link social-list__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
           </li>
         </ul>
 
