--- a/source/index.html
+++ b/source/index.html
@@ -8,27 +8,27 @@
   </head>
 
   <body class="page__body page-body">
-
-    <header class="page-body__header page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="190" height="39" alt="Логотип «Кэт энерджи»">
-      </a>
-      <nav class="page-header__main-nav main-nav">
-        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <ul class="main-nav__list site-menu">
-          <li class="site-menu__item site-menu__item--active">
-            <a class="site-menu__link">Главная</a>
-          </li>
-          <li class="site-menu__item">
-            <a class="site-menu__link" href="catalog.html">Каталог продукции</a>
-          </li>
-          <li class="site-menu__item">
-            <a class="site-menu__link" href="form.html">Подбор программы</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-
+    <div class="container-header">
+      <header class="page-body__header page-header">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="190" height="39" alt="Логотип «Кэт энерджи»">
+        </a>
+        <nav class="page-header__main-nav main-nav">
+          <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+          <ul class="main-nav__list site-menu">
+            <li class="site-menu__item site-menu__item--active">
+              <a class="site-menu__link">Главная</a>
+            </li>
+            <li class="site-menu__item">
+              <a class="site-menu__link" href="catalog.html">Каталог продукции</a>
+            </li>
+            <li class="site-menu__item">
+              <a class="site-menu__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
     <main class="page-body__main page-main">
 
       <h1 class="visually-hidden">Питание для котов</h1>
@@ -61,7 +61,7 @@
         </section>
       </div>
 
-      <section class=" page-main__advantages advantages container">
+      <section class="page-main__advantages advantages container">
         <h2 class="advantages__title title">Как это работает</h2>
         <ul class="advantages__list">
           <li class="advantages__item">
@@ -86,18 +86,21 @@
             <p class="example__text">
               Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
             </p>
-            <dl class="example__list result">
-              <div class="result__wrapper">
-                <dt class="result__definition">снижение веса</dt>
-                <dd class="result__description">5кг</dd>
-              </div>
-              <div class="result__wrapper">
-                <dt class="result__definition">затрачено времени</dt>
-                <dd class="result__description">60 дней</dd>
-              </div>
-            </dl>
-            <b class="example__expenses">Затраты на питание: 15 000 РУБ.</b>
+            <div class="example__result-container">
+              <dl class="example__list result">
+                <div class="result__wrapper">
+                  <dt class="result__definition">снижение веса</dt>
+                  <dd class="result__description">5кг</dd>
+                </div>
+                <div class="result__wrapper">
+                  <dt class="result__definition">затрачено времени</dt>
+                  <dd class="result__description">60 дней</dd>
+                </div>
+              </dl>
+              <p class="example__expenses">Затраты на питание: 15 000 РУБ.</p>
+            </div>
           </div>
+
           <div class="example__it-was-after">
             <div class="example__image">
               <img class="example__image-it-was" src="img/before-mobile.png" width="311" height="232" alt="до нашего питания">
