--- a/source/index.html
+++ b/source/index.html
@@ -136,26 +136,28 @@
       </div>
       <img class="page-footer__map" src="img/map.png" width="1440" height="400" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
 
-      <div class="page-footer__container container">
-        <a class="page-footer__logo">
-          <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
-        </a>
-        <ul class="page-footer__social social-list">
-          <li class="social-list__social-item">
-            <a class="social-list__social-link social-list__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
-          </li>
-          <li class="social-list__social-item">
-            <a class="social-list__social-link social-list__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
-          </li>
-          <li class="social-list__social-item">
-            <a class="social-list__social-link social-list__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
-          </li>
-        </ul>
+        <div class="page-footer__container">
+          <div class="container">
+            <a class="page-footer__logo">
+              <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
+            </a>
+            <ul class="page-footer__social social-list">
+              <li class="social-list__social-item">
+                <a class="social-list__social-link social-list__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
+              </li>
+              <li class="social-list__social-item">
+                <a class="social-list__social-link social-list__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
+              </li>
+              <li class="social-list__social-item">
+                <a class="social-list__social-link social-list__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
+              </li>
+            </ul>
 
-        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          HTML Academy<img class="page-footer__logo-academy" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логодип «Html Academy»">
-        </a>
-      </div>
+            <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+              HTML Academy<img class="page-footer__logo-academy" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логодип «Html Academy»">
+            </a>
+          </div>
+        </div>
 
     </footer>
   </body>
