--- a/source/index.html
+++ b/source/index.html
@@ -137,7 +137,7 @@
       <img class="page-footer__map" src="img/map.png" width="1440" height="400" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
 
         <div class="page-footer__container">
-          <div class="container">
+          <div class="container container--flex">
             <a class="page-footer__logo">
               <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
             </a>
