--- a/source/form.html
+++ b/source/form.html
@@ -10,7 +10,7 @@
   <body class="page__body page-body">
     <!-- <div class="container-header"> -->
       <header class="page-body__header page-header">
-        <div class="page_header__wrapper">
+        <div class="page_header_wrapper">
           <a class="page-header__logo">
             <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="190" height="39" alt="Логотип «Кэт энерджи»">
           </a>
@@ -25,7 +25,7 @@
               <a class="site-menu__link site-menu__link--color" href="catalog.html">Каталог продукции</a>
             </li>
             <li class="site-menu__item">
-              <a class="site-menu__link site-menu__link--color site-menu__item--active" href="form.html">Подбор программы</a>
+              <a class="site-menu__link site-menu__link--color site-menu__item-active" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -42,65 +42,65 @@
 
         <div class="form__wrapper-cat-data">
 
-          <fieldset class="form__group form__group-grid form__group--padding">
+          <fieldset class="form__group form__group-grid">
             <legend class="visually-hidden">Данные кота</legend>
-            <p class="form__cat-data form__grid">
+            <p class="form__grid">
               <label class="form__label" for="name">Имя:*</label>
-              <input class="form__text form--input" type="text" name="name" id="name" placeholder="Барсик" required>
+              <input class="form__input" type="text" name="name" id="name" placeholder="Барсик" required>
             </p>
-            <p class="form__cat-data form__grid">
+            <p class="form__grid">
               <label class="form__label" for="weight">Вес (кг):*</label>
-              <input class="form__number form--input" type="number" name="weight" id="weight" placeholder="7" required>
+              <input class="form__input" type="number" name="weight" id="weight" placeholder="7" required>
             </p>
-            <p class="form__cat-data form__grid form__grid--padding">
+            <p class="form__grid form__grid--padding">
               <label class="form__label" for="age">Возраст (лет):</label>
-              <input class="form__number form--input" type="number" name="age" id="age" placeholder="7">
+              <input class="form__input" type="number" name="age" id="age" placeholder="7">
             </p>
           </fieldset>
 
-          <fieldset class="form__group form__group-radio">
+          <fieldset class="form__group form__group--radio">
             <legend class="visually-hidden">Выбор программы</legend>
               <div class="form__radio-grid">
                 <div class="form__border">
                   <p class="form__program">
-                    <input class="form__radio" type="radio" name="programm" value="slimming" id="slimming" checked>
+                    <input type="radio" name="programm" value="slimming" id="slimming" checked>
                     <label class="form__label-radio" for="slimming">Похудение</label>
                   </p>
 
                   <p class="form__program">
-                    <input class="form__radio" type="radio" name="programm" value="weight-gain" id="weight-gain">
+                    <input type="radio" name="programm" value="weight-gain" id="weight-gain">
                     <label class="form__label-radio" for="weight-gain">Набор массы</label>
                   </p>
 
                   <p class="form__program">
-                    <input class="form__radio" type="radio" name="programm" value="not-know" id="not-know">
+                    <input type="radio" name="programm" value="not-know" id="not-know">
                     <label class="form__label-radio" for="not-know">Не знаю (Нужен ваш совет)</label>
                   </p>
                 </div>
               </div>
-            </fieldset>
+          </fieldset>
         </div>
 
         <fieldset class="form__group container">
           <legend class="form__legend">Контактные данные(владельца кота)</legend>
           <div class="form__wrapper-data">
-            <p class="form__сat-owner form__grid">
+            <p class="form__grid form__grid--desctop">
               <label class="form__label" for="email">E-mail:*</label>
-              <input class="form__email form--input" type="email" name="email" id="email" placeholder="kuklachev@gmail.com" required>
+              <input class="form__input" type="email" name="email" id="email" placeholder="kuklachev@gmail.com" required>
             </p>
-            <p class="form__сat-owner form__grid">
+            <p class="form__grid form__grid--desctop">
               <label class="form__label" for="tel">Телефон:*</label>
-              <input class="form__tel form--input" type="tel" name="tel" pattern="8 \(\d{3}\) \d{3}-\d{2}-\d{2}" id="tel" placeholder="8 (960) 900-60-90" required>
+              <input class="form__input" type="tel" name="tel" pattern="8 \(\d{3}\) \d{3}-\d{2}-\d{2}" id="tel" placeholder="8 (960) 900-60-90" required>
             </p>
           </div>
         </fieldset>
 
-        <fieldset class="form__group form__group-textarea container">
+        <fieldset class="form__group form__group--textarea container">
           <legend class="form__legend form__legend--textarea">Комментарий</legend>
           <textarea class="form__textarea-comment"  name="comment">Расскажите обо всех повАдках кота</textarea>
         </fieldset>
 
-        <fieldset class="form__group form__group-checkbox container">
+        <fieldset class="form__group container">
           <legend class="form__legend">Дополнительно</legend>
           <div class="form__checkbox-wrapper">
             <p class="form__checkbox-greed">
@@ -130,7 +130,8 @@
 
     </main>
 
-    <footer class="page-body__footer page-footer">
+        <footer class="page-body__footer page-footer">
+
       <div class="page-footer__address address container">
         <div class="address__wrapper">
           <p class="page-footer__slogan">
@@ -145,26 +146,29 @@
       </div>
       <img class="page-footer__map" src="img/map.png" width="1440" height="400" alt="ул. Большая Конюшенная, д. 19/8 Санкт-Петербург">
 
-      <div class="page-footer__container container">
-        <a class="page-footer__logo">
-          <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
-        </a>
-        <ul class="page-footer__social social-list">
-          <li class="social-list__social-item">
-            <a class="social-list__social-link social-list__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
-          </li>
-          <li class="social-list__social-item">
-            <a class="social-list__social-link social-list__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
-          </li>
-          <li class="social-list__social-item">
-            <a class="social-list__social-link social-list__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
-          </li>
-        </ul>
+        <div class="page-footer__container">
+          <div class="container container--flex">
+            <a class="page-footer__logo">
+              <img class="page-footer__logo-image logo-footer" src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип «Кэт энерджи»">
+            </a>
+            <ul class="page-footer__social social-list">
+              <li class="social-list__social-item">
+                <a class="social-list__social-link social-list__social-link--vkontakte" href="#"><span class="visually-hidden">Мы в контакте</span></a>
+              </li>
+              <li class="social-list__social-item">
+                <a class="social-list__social-link social-list__social-link--instagram" href="#"><span class="visually-hidden">Мы в инстаграмм</span></a>
+              </li>
+              <li class="social-list__social-item">
+                <a class="social-list__social-link social-list__social-link--facebook" href="#"><span class="visually-hidden">Мы в фэйсбук</span></a>
+              </li>
+            </ul>
 
-        <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-          HTML Academy<img class="page-footer__logo-academy" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логодип «Html Academy»">
-        </a>
-      </div>
+            <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+              HTML Academy<img class="page-footer__logo-academy" src="https://via.placeholder.com/27x34" width="27" height="34" alt="Логодип «Html Academy»">
+            </a>
+          </div>
+        </div>
+
     </footer>
 
   </body>
