--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
 
         <div class="form__wrapper-cat-data">
 
-          <fieldset class="form__group form__group-grid">
+          <fieldset class="form__group form__group--grid">
             <legend class="visually-hidden">Данные кота</legend>
             <p class="form__grid">
               <label class="form__label" for="name">Имя:*</label>
@@ -96,7 +96,7 @@
         </fieldset>
 
         <fieldset class="form__group form__group--textarea form__group--line">
-          <div class="container">
+          <div class="form__textarea container">
             <h2 class="form__legend">Комментарий</h2>
             <textarea class="form__textarea-comment"  name="comment">Расскажите обо всех повАдках кота</textarea>
           </div>
