--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,11 +10,13 @@
   <body class="page__body page-body">
 
     <header class="page-body__header page-header">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="191" height="37" alt="Логотип «Кэт энерджи»">
-      </a>
-      <nav class="page-header__main-nav main-nav">
+      <div class="page_header__wrapper">
+        <a class="page-header__logo">
+          <img class="page-header__logo-image logo-header" src="https://via.placeholder.com/191x37" width="190" height="39" alt="Логотип «Кэт энерджи»">
+        </a>
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      </div>
+      <nav class="page-header__main-nav main-nav">
         <ul class="main-nav__list site-menu">
           <li class="site-menu__item">
             <a href="index.html">Главная</a>
@@ -202,12 +204,12 @@
           </div>
         </div>
       </section>
-      <div class="page-main__line-wrapper">
-        <h2 class="page-main__line-title container">Дополнительные товары</h2>
-      </div>
-      <div class="page-main__catalog-present-wrapper">
-        <h2 class="visually-hidden">Список дополнительных товаров</h2>
-        <section class="page-main__additional-goods catalog-additional-goods">
+
+
+      <section class="page-main__additional-goods catalog-additional-goods catalog-additional-goods--line">
+        <h2 class="catalog-additional-goods-title container">Дополнительные товары</h2>
+        <div class="catalog-additional-goods__catalog-wrapper">
+
           <ul class="catalog-additional-goods__goods-list additional-goods">
 
             <li class="additional-goods__item additional-goods-product">
@@ -253,15 +255,14 @@
               </div>
               <a class="additional-goods-product__link button" href="#">Заказать</a>
             </li>
-
           </ul>
-        </section>
 
-        <section class="page-main__present present">
-          <h2 class="visually-hidden">Получите подарок</h2>
-          <p class="present__text-pesent">Закажите все и получите чехол для кота в подарок!</p>
-        </section>
-      </div>
+          <section class="catalog-additional-goods__present present"> <!-- page-main__present -->
+            <h3 class="visually-hidden">Получите подарок</h3>
+            <p class="present__text-pesent">Закажите все и получите чехол для кота в подарок!</p>
+          </section>
+        </div>
+      </section>
     </main>
 
     <footer class="page-body__footer page-footer">
